<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="add">Tambah</string>
    <string name="buy">Beli</string>
    <string name="cancel">Batal</string>
    <string name="close">Tutup</string>
    <string name="delete">Hapus</string>
    <string name="edit">Ubah</string>
    <string name="finish">Selesai</string>
    <string name="min">Kurangi</string>
    <string name="process">Proses</string>
    <string name="pay">Bayar</string>
    <string name="track">Lacak</string>
    <string name="save">Simpan</string>
    <string name="verify">Verifikasi</string>

    <string name="fill_all_field">Lengkapi semua isian</string>

    <string name="error_happened">Terjadi kesalahan</string>

    <string name="home">Beranda</string>
    <string name="home_banner_content">Banner</string>
    <string name="home_view_more">Lihat Semua</string>
    <string name="home_voucher">Voucher Untukmu</string>

    <string name="category">Kategori</string>
    <string name="category_all">Semua</string>
    <string name="category_craft">Kerajinan</string>
    <string name="category_fashion">Fashion</string>
    <string name="category_culinary">Kuliner</string>
    <string name="category_electronic">Elektronik</string>
    <string name="category_topup">Tagihan</string>

    <string name="voucher">Voucher</string>
    <string name="voucher_label">Voucher Untukmu</string>

    <string name="product">Produk</string>
    <string name="product_empty">Produk Kosong</string>
    <string name="product_detail">Detail Produk</string>
    <string name="product_popular" tools:ignore="Typos">Produk Populer</string>
    <string name="product_condition">Kondisi</string>
    <string name="product_dimension">Dimensi</string>
    <string name="product_min_order">Min. Pemesanan</string>
    <string name="product_category">Kategori</string>
    <string name="product_sub_category">Sub Kategori</string>
    <string name="product_desc">Deskripsi</string>
    <string name="product_shop">Toko</string>
    <string name="product_last_order">Produk Terakhir Dibeli</string>
    <string name="product_order_again">Beli Lagi</string>
    <string name="product_count_qty">%d x</string>
    <string name="product_stock">Stok</string>
    <string name="product_stock_empty">Stok Habis</string>
    <string name="product_weight">Berat</string>

    <string name="basket">Keranjang</string>
    <string name="basket_check">Cek</string>
    <string name="basket_delete">Hapus</string>
    <string name="basket_delete_confirmation">Apakah Anda ingin menghapus produk ini dari keranjang?</string>
    <string name="basket_add_product">+ Keranjang</string>
    <string name="basket_checkout">Checkout</string>
    <string name="basket_note">Catatan</string>
    <string name="basket_note_add">Tambah Catatan</string>
    <string name="basket_total">Total Barang</string>
    <string name="basket_add_product_to_basket_failed">Gagal menambahkan ke keranjang</string>
    <string name="basket_add_product_to_basket_success">Barang ditambahkan ke keranjang</string>

    <string name="account">Profil</string>
    <string name="account_phone">Ho Handphone</string>
    <string name="account_email">Email</string>
    <string name="account_edit">Ubah Profil</string>
    <string name="account_edit_success">Profil berhasil diubah</string>

    <string name="address">Alamat Kirim</string>
    <string name="address_district">Kota</string>
    <string name="address_postal_code">Kode Pos</string>
    <string name="address_province">Provinsi</string>
    <string name="address_sub_district">Kecamatan</string>
    <string name="address_add_success">Alamat berhasil ditambahkan</string>
    <string name="address_add_failed">Alamat gagal ditambahkan</string>
    <string name="address_load_failed">Gagal mendapatkan alamat</string>
    <string name="address_select">Pilih Alamat</string>
    <string name="address_select_other">Pilih Alamat Lain</string>
    <string name="address_courier">Pengiriman</string>
    <string name="address_empty">Alamat Kosong</string>
    <string name="address_list">Daftar Alamat</string>
    <string name="address_add">Tambah Alamat</string>
    <string name="address_edit">Ubah Alamat</string>
    <string name="address_delete">Hapus Alamat</string>
    <string name="address_delete_dialog_message">Apakah Anda ingin menghapus alamat ini?</string>
    <string name="address_set_default_dialog_message">Apakah Anda ingin menjadikan alamat ini sebagai default?</string>
    <string name="address_full">Alamat Lengkap</string>
    <string name="address_label">Label Alamat</string>
    <string name="address_label_helper">Contoh: Rumah/Kantor/Balai</string>
    <string name="address_recipient">Penerima</string>
    <string name="address_recipient_phone">No HP Penerima</string>
    <string name="address_note">Catatan</string>
    <string name="address_note_helper">Contoh: Pagar rumah kuning</string>

    <string name="register">Daftar</string>
    <string name="register_email_helper">Contoh: email@example.com</string>
    <string name="register_header">Selamat datang di Oleb Sai!</string>
    <string name="register_desc">Hai, nampaknya kamu pengguna baru. Kamu dapat menggunakan aplikasi setelah mendaftar.</string>
    <string name="register_phone_helper">Contoh: 082123456789</string>
    <string name="register_repeat_password">Ulangi Password</string>
    <string name="register_username">Nama Lengkap</string>
    <string name="register_success">Register berhasil</string>
    <string name="register_failed">Register gagal</string>

    <string name="login">Login</string>
    <string name="login_header">Selamat datang!</string>
    <string name="login_desc">Kamu dapat melanjutkan dari bagian terakhir yang kamu tinggalkan.</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Lupa password</string>
    <string name="login_error_form_empty">Username dan Password harus diisi</string>
    <string name="login_error_form_invalid">Username/Password salah</string>
    <string name="login_to_your_account">Login ke Akun kamu</string>

    <string name="logout">Logout</string>
    <string name="logout_confirmation">Apakah Anda ingin keluar?</string>

    <string name="detail">Rincian</string>

    <string name="checkout_courier_select">Pilih jasa kirim</string>
    <string name="checkout_courier_failed">Gagal memuat Jasa kirim</string>
    <string name="checkout_summary">Ringkasan</string>
    <string name="checkout_product_total">Total Harga</string>
    <string name="checkout_delivery_total">Total Ongkos Kirim</string>
    <string name="checkout_total">Total Tagihan</string>

    <string name="order">Pesanan</string>
    <string name="order_empty">Pesanan Kosong</string>
    <string name="order_date_checkout">Tanggal Pesanan</string>
    <string name="order_date_paid">Tanggal Dibayar</string>
    <string name="order_processed">Pesanan Anda sedang diproses</string>
    <string name="order_see">Lihat Pesanan</string>
    <string name="order_product_ordered">Produk yang dibeli</string>
    <string name="order_pay_failed">Pembayaran gagal</string>
    <string name="order_pay_success">Pembayaran berhasil</string>
    <string name="order_finish_failed">Pesanan gagal diselesaikan</string>
    <string name="order_finish_success">Pesanan diselesaikan</string>

    <string name="form_email_invalid">Email tidak valid</string>
    <string name="form_phone_invalid">No HP tidak valid</string>
    <string name="form_password_not_equal">Password tidak sama</string>
    <string name="form_required_field">Wajib diisi</string>

    <string name="otp_title">Input OTP</string>
    <string name="otp_header">Masukkan kode OTP di email</string>
    <string name="otp_desc">Cek folder kotak masuk di emailmu, jangan lupa cek folder spam juga ya!</string>
    <string name="otp_error_six_digit">OTP harus 6 digit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>